# synth

./: Cargo.toml  foo
src/: adsr.rs  audio_util.rs  main.rs  manychannel.rs  midi_io.rs  oscillator.rs  synth_template.rs  util.rs
